--- a/main.ipynb
+++ b/main.ipynb
@@ -252,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Popularity based recommender system\n",
+    "##Popularity based recommender system\n",
     "we will display the top 50 books with highest average rating but we will consider only those books which have got a minimum of 250 votes/rating\n",
     "\n",
     "1- merger ratings and books table on ISBN column\n",
@@ -2096,24 +2096,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(47, 0.2702651417103732),\n",
-       " (545, 0.26396193711234966),\n",
-       " (82, 0.2366937434740099),\n",
-       " (634, 0.23299389358170397),\n",
-       " (551, 0.2262639743141286)]"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "#this block is of understanding\n",
@@ -2126,13 +2111,6 @@
     "#by defualt the list was sorted in ascending order which means that the least similar was on top, so we used reverse to convert it in decsending order\n",
     "#we need only 5 most similar items and also the first one is the book itself so we are using the items from 1:6"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
