--- a/main.ipynb
+++ b/main.ipynb
@@ -2111,6 +2111,17 @@
     "#by defualt the list was sorted in ascending order which means that the least similar was on top, so we used reverse to convert it in decsending order\n",
     "#we need only 5 most similar items and also the first one is the book itself so we are using the items from 1:6"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#to export the popular dataframe (the one made is popularity based recommender) to html file\n",
+    "import pickle\n",
+    "pickle.dump(popular_df,open('popular.pkl','wb'))"
+   ]
   }
  ],
  "metadata": {
