--- a/main.ipynb
+++ b/main.ipynb
@@ -2114,13 +2114,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
     "#to export the popular dataframe (the one made is popularity based recommender) to html file\n",
     "import pickle\n",
-    "pickle.dump(popular_df,open('popular.pkl','wb'))"
+    "pickle.dump(books,open('book.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(similarity_score,open('similarity_scores.pkl','wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.dump(pt,open('pt.pkl','wb'))"
    ]
   }
  ],
